--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -11,10 +11,10 @@
   padding: 0;
 }
 
-html {
-  font-size: 16px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
